--- a/css/large.css
+++ b/css/large.css
@@ -1,7 +1,6 @@
 /* 데스크탑 기본 글자 크기 */
 body {
   font-size: 1.4rem;
-  background-color: yellow;
 }
 /* 데스크탑 레이아웃 */
 .container {
@@ -26,11 +25,29 @@ body {
 /* 데스크탑 멤버 링크 */
 .memberOnly {
   grid-area: 1/2/2/3;
+
 }
 
 /* 데스크탑 검색 폼 */
 .searchForm {
   grid-area: 2/2/3/3;
-  text-align: right;
-  background-color: lime;
+  /* text-align: right; */
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-gap: 10px;
 }
+.searchForm fieldset {
+  display: contents;
+}
+.buttonSearch {
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  padding: 2px 10px;
+  background-color: #988574;
+  color: #fff;
+}
+/* .appNavigation {
+  display: grid;
+  grid-template: repeat(4, 50px) / repeat(7, 1fr);
+  align-items: center;
+} */
