--- a/css/large.css
+++ b/css/large.css
@@ -7,7 +7,8 @@ body {
   justify-content: center;
 }
 .appHeader,
-.appMain {
+.appMain,
+.menu__list {
   width: 1000px;
 }
 .appNavigation {
@@ -25,9 +26,7 @@ body {
 /* 데스크탑 멤버 링크 */
 .memberOnly {
   grid-area: 1/2/2/3;
-
 }
-
 /* 데스크탑 검색 폼 */
 .searchForm {
   grid-area: 2/2/3/3;
@@ -46,8 +45,89 @@ body {
   background-color: #988574;
   color: #fff;
 }
+/* 데스크탑 네비게이션 */
+.appNavigation {
+  background-color: #988574;
+  box-shadow: 0 -2px -2px 0 #aaa, 0 -2px -2px 0 #aaa;
+}
+.buttonBurger {
+  display: none;
+}
+.menu__list {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  display: grid;
+  grid-template: auto / repeat(5, 1fr);
+  grid-gap: 20px;
+  color: #fff;
+}
+.menu__link {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-shadow: 1px 1px 0 #000, -1px -1px 0 #000;
+}
+.menu__subMenu li {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 1.5rem;
+}
+/* 데스크탑 메인 콘텐츠 */
+.appMain {
+  display: grid;
+  grid-template: repeat(2, 25vh) / repeat(12, 1fr);
+  grid-gap: 20px;
+}
+/* 데스크탑 추천 서적 */
+.book {
+  grid-area: 1/1/2/span 4;
+  background-color: yellow;
+}
+/* 데스크탑 새소식 */
+.news {
+  grid-area: 1/5/2/span 8;
+  background-color: pink;
+}
+/* 데스크탑 게시판 */
+.board {
+  grid-area: 2/1/3/span 4;
+  background-color: skyblue;
+}
+/* 데스크탑 인기사이트 */
+.favorite {
+  grid-area: 2/10/3/span 3;
+  background-color: tomato;
+}
+/* 데스크탑 트위터 */
+.twitter {
+  grid-area: 2/5/3/span 5;
+  background-color: violet;
+}
+/* 데스크탑 내비게이션 */
 /* .appNavigation {
   display: grid;
   grid-template: repeat(4, 50px) / repeat(7, 1fr);
   align-items: center;
+} */
+/* 데스크탑 메인 콘텐츠 연습*/
+/* .appMain {
+  display: grid;
+  grid-template: repeat(2, 10vh) / repeat(12, 1fr);
+  grid-column-gap: 20px;
+}
+.book {
+  grid-area: 1/1/2/5;
+}
+.news {
+  grid-area: 1/5/2/13;
+}
+.board {
+  grid-area: 2/1/3/5;
+}
+.favorite {
+  grid-area: 2/5/3/10;
+}
+.twitter {
+  grid-area: 2/10/3/13;
 } */
