--- a/css/small.css
+++ b/css/small.css
@@ -58,7 +58,50 @@ input[type="search"] {
   background: transparent url(./images/btn_search.png) 0 0 /cover no-repeat scroll;
 }
 /* 모바일 내비게이션 */
-.appNavigation {
+
+/* 모바일 메뉴 제어 버튼 */
+.buttonBurger {
+  width: 35px;
+  height: 35px;
+  position: absolute;
+  top: 60px;
+  right: 20px;
+  overflow: hidden;
+}
+.burgerBar {
+  position: absolute;
+  left: 0;
+  height: 20%;
+  width: 100%;
+  background-color: #fff;
+  transition: all 200ms ease-in-out;
+}
+.round {
+ border-radius: 20px;
+}
+.positionTop {
+  top: 0;
+}
+.positionMiddle {
+  top: 50%;
+  transform: translateY(-50%);
+}
+.positionBottom {
+  top: 100%;
+  transform: translateY(-100%);
+}
+.isAct .positionTop {
+  top: 50%;
+  transform: translateY(-50%)  rotate(45deg);
+}
+.isAct .positionMiddle {
+  transform: translateX(-105%) translateY(-50%);
+}
+.isAct .positionBottom {
+  top: 50%;
+  transform: translateY(-50%) rotate(-45deg);
+}
+.menu__list {
   position: fixed;
   top: 0;
   left: 0;
@@ -68,6 +111,17 @@ input[type="search"] {
 }
 /* 모바일 메인콘텐츠 */
 .appMain {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 0 20px;
+}
+.book,
+.news,
+.board,
+.favorite,
+.twitter {
+  width: 100%;
+  height: 10vh;
 }
 /* 모바일 푸터 */
 .appFooter {
