--- a/css/common.css
+++ b/css/common.css
@@ -417,6 +417,92 @@ video.responsive {
   height: 100%;
 }
 
+/* 게시판 */
+.board {
+  position: relative;
+  overflow: hidden;
+}
+.board__list {
+  margin: 15px 0;
+  padding-left: 20px;
+}
+.board__list li {
+  margin: 5px 0;
+  display: flex;
+  flex-flow: row nowrap;
+}
+.board__list a {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  flex-grow: 1;
+  margin: 0 10px 0 5px;
+}
+.board__more {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  padding: 10px;
+}
+/* 공통 인기 사이트 */
+.favorite__list {
+  margin: 15px 0;
+  padding-left: 20px;
+}
+.favorite__list li {
+  counter-increment: number;
+  margin: 10px 0;
+  display: flex;
+  flex-flow: row nowrap;
+}
+.favorite__list li::before {
+  content: counter(number);
+  color: #fff;
+  background-color: #eea60a;
+  padding: 2px 6px;
+  margin-right: 5px;
+  display: inline-block;
+  border-radius: 50%;
+}
+.favorite__list a {
+  position: relative;
+  flex-grow: 1;
+}
+.favorite__list a:hover::before,
+.favorite__list a:focus::before {
+  content: attr(data-tooltip);
+  position: absolute;
+  top: 1em;
+  background-color: #eea60a;
+  border: 1px solid #aaa;
+  padding: 5px;
+  z-index: 100;
+  color: #fff;
+  box-shadow: 2px 2px 0 0 #000;
+}
+
+/* .favorite__list {
+  background-color: skyblue;
+  line-height: 3;
+  counter-reset: favorite__list; 리셋해주는게 중요
+}
+.favorite__list li {
+  margin-top: 10px;
+  margin-left: 50px;
+}
+.favorite__list > li:hover:after {
+  content: attr(data-tooltip);
+}
+.favorite__list > li::before {
+  padding: 4px 10px;
+  counter-increment: favorite__list;
+  content: counter(favorite__list,decimal);
+  background-color: orange;
+  color: #fff;
+  border-radius: 15px;
+} */
+
+
 /* 공통 메인 콘텐츠 섹션 제목 연습 */
 /* [class*="__enTitle"] {
   display: block;
