--- a/css/small.css
+++ b/css/small.css
@@ -159,6 +159,13 @@ input[type="search"] {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+/* 모바일 인기 사이트 */
+.favorite__list a:hover::before,
+.favorite__list a:focus::before {
+  left: 10em;
+}
+
 /* 모바일 푸터 */
 .appFooter {
   grid-column-start: 1;
