푸터 마크업 및 디자인 구현

--- a/css/large.css
+++ b/css/large.css
@@ -107,6 +107,13 @@ body {
 .twitter {
   grid-area: 2/5/3/span 5;
 }
+/* 데스크탑 푸터 */
+.appFooter {
+  text-align: center;
+}
+
+
+
 /* 데스크탑 내비게이션 */
 /* .appNavigation {
   display: grid;
