--- a/css/small.css
+++ b/css/small.css
@@ -166,10 +166,15 @@ input[type="search"] {
   left: 10em;
 }
 
+/* 공통 트위터 */
+.twitter__userProfile {
+  text-align: right;
+}
+
 /* 모바일 푸터 */
 .appFooter {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 12;
-  grid-row-end: 13;
+  line-height: 2;
+}
+.address span {
+  display: block;
 }
